# polyRef

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.kiro/notes/: implementation-notes.md
crates/polyref-checker-spi/: Cargo.toml
crates/polyref-checker-spi/src/: cgroup.rs  error.rs  host.rs  lib.rs  limits.rs  memo.rs
crates/polyref-checker-spi/tests/: cgroup.rs  host_memo.rs  host_pool.rs  host_process.rs  host_protocol.rs  layer4_contract.rs  red_tests.rs
crates/polyref-core/: Cargo.toml
crates/polyref-core/src/: artifact_kind.rs  canonical.rs  correspondence_kind.rs  error.rs  evidence.rs  ids.rs  language.rs  lib.rs  migration_map.rs  report.rs  source_span.rs  status.rs
crates/polyref-core/src/observation/: mod.rs  visibility.rs
crates/polyref-core/tests/: red_tests.rs
crates/polyref-engine/: Cargo.toml
crates/polyref-engine/src/: a2.rs  error.rs  lib.rs  obligation.rs
crates/polyref-engine/tests/: a2_ordering.rs  obligation.rs
crates/polyref-frontier/: Cargo.toml
crates/polyref-frontier/src/: closure.rs  coverage_risk.rs  lib.rs
crates/polyref-frontier/tests/: closure.rs  coverage_risk.rs  layer5_integration.rs
crates/polyref-graph/: Cargo.toml
crates/polyref-graph/migrations/: 0001_init.sql
crates/polyref-graph/src/: audit.rs  builder.rs  error.rs  lib.rs  migration_map.rs  model.rs  observation_registry.rs  read_model.rs  report_store.rs  store.rs  tags.rs
crates/polyref-graph/src/audit/: event.rs  mod.rs  reader.rs  writer.rs
crates/polyref-graph/src/blobstore/: fs.rs  key.rs  memo.rs  mod.rs  stats.rs
crates/polyref-graph/tests/: audit_properties.rs  blobstore_properties.rs  blobstore_round_trip.rs  extractor_builder.rs  layer5_fixture.rs  migration_map.rs  observation_registry.rs  properties.rs  read_model.rs  report_store.rs  round_trip.rs
crates/polyref-loader/: Cargo.toml
crates/polyref-loader/src/: checkout.rs  lib.rs  manifest.rs  replay.rs  sandbox.rs
crates/polyref-loader/tests/: checkout.rs  manifest.rs  replay.rs  sandbox.rs
docs/: README.md  architecture.md  build-plan.md  layer-0-core-ir.md  overview.md  slice-1-core-ir.md  verification.md
docs/adrs/: ADR-001-host-language.md  ADR-002-plugin-spi.md  ADR-003-entity-ids.md  ADR-004-dynamic-and-generated-evidence.md  ADR-005-ambiguity-and-tie-break.md  ADR-006-persistence-and-schemas.md  ADR-007-concurrency-model.md  ADR-008-decision-granularity-and-slos.md  ADR-009-sandbox-and-security.md  ADR-010-observation-taxonomy.md
fixtures/layer4/users-route-migration/: expected.json
fixtures/layer4/users-route-migration/new/: openapi.yaml
fixtures/layer4/users-route-migration/new/src/: users_v2.ts
fixtures/layer4/users-route-migration/old/: openapi.yaml
fixtures/layer4/users-route-migration/old/src/: users.ts
fixtures/layer5/users-route-frontier/: expected.json
plugins/checker-route/: Cargo.toml
plugins/checker-route/src/: lib.rs  main.rs
plugins/checker-route/tests/: route_checker.rs
plugins/extractor-openapi/: Cargo.toml
plugins/extractor-openapi/src/: lib.rs  main.rs
plugins/extractor-openapi/tests/: openapi_route.rs
plugins/extractor-typescript/: Cargo.toml
plugins/extractor-typescript/src/: lib.rs  main.rs
plugins/extractor-typescript/tests/: typescript_route.rs
polyref/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  deny.toml  rust-toolchain.toml
polyref/.cargo/: config.toml
polyref/.github/workflows/: ci.yml
polyref/crates/polyref-checker-spi/src/: checker.rs  envelope.rs  extractor.rs  lib.rs  limits.rs
polyref/crates/polyref-core/src/: artifact_kind.rs  canonical.rs  correspondence_kind.rs  ids.rs  language.rs  lib.rs  status.rs
polyref/crates/polyref-core/src/observation/: mod.rs
polyref/crates/polyref-core/tests/: red_tests.rs
polyref/schemas/: CHANGELOG.md  artifact-kind.json  audit-event.json  evidence-pointer.json  evidence.json  language.json  manifest.json  migration-map.json  report.json  unknown-reason.json
polyref/schemas/_meta/: version.json
polyref/schemas/checker-spi/: describe.json
polyref/schemas/ids/: entity-id.json
polyref/schemas/observation/: api-call.json  test-invocation.json  visibility.json
schemas/: CHANGELOG.md  audit-event.json  broken-reason.json  correspondence-kind.json  manifest.json  source-span.json  validation-status.json
schemas/_meta/: version.json
schemas/checker-spi/: check.json
schemas/extractor-spi/: extract.json
schemas/ids/: artifact-id.json  correspondence-id.json  edge-id.json
schemas/observation/: _kind.json  build-target.json  schema-validation.json  workflow-run.json
scripts/: _write_schemas.py  schema-bindings-check.sh  verify-schemas.sh
