[workspace]
resolver = "2"
members = [
    "crates/polyref-core",
    "crates/polyref-checker-spi",
    "crates/polyref-graph",
    "crates/polyref-loader",
    "plugins/extractor-openapi",
    "plugins/extractor-typescript",
]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
authors = ["PolyRef Contributors"]
repository = "https://example.invalid/polyref"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "allow"
unimplemented = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
indexmap = "=2.2.6"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
unicode-normalization = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
