[package]
name = "polyref-frontier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
polyref-core = { path = "../polyref-core" }
polyref-graph = { path = "../polyref-graph" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
