[package]
name = "polyref-graph"
description = "PolyRef GraphStore: persistent typed correspondence graph (Layer 1)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
polyref-core = { path = "../polyref-core", version = "0.1.0" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
