[package]
name = "polyref-graph"
description = "PolyRef GraphStore: persistent typed correspondence graph (Layer 1)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
polyref-checker-spi = { path = "../polyref-checker-spi", version = "0.1.0" }
polyref-core = { path = "../polyref-core", version = "0.1.0" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
polyref-extractor-openapi = { path = "../../plugins/extractor-openapi", version = "0.1.0" }
polyref-extractor-typescript = { path = "../../plugins/extractor-typescript", version = "0.1.0" }
proptest = "1.5"
