[package]
name = "polyref-loader"
description = "PolyRef Loader: reproducible checkout, sandboxed replay, and run manifests (Layer 2)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
polyref-core = { path = "../polyref-core", version = "0.1.0" }
polyref-graph = { path = "../polyref-graph", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
