[package]
name = "polyref-checker-route"
description = "PolyRef route compatibility checker plugin."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
polyref-core = { path = "../../crates/polyref-core", version = "0.1.0" }
polyref-checker-spi = { path = "../../crates/polyref-checker-spi", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
