[package]
name = "polyref-extractor-typescript"
description = "PolyRef TypeScript route handler extractor plugin."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
polyref-core = { path = "../../crates/polyref-core", version = "0.1.0" }
polyref-checker-spi = { path = "../../crates/polyref-checker-spi", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
